--- a/airootfs/home/rebornos/.rebornos-welcome/configuration/settings.json
+++ b/airootfs/home/rebornos/.rebornos-welcome/configuration/settings.json
@@ -8,6 +8,6 @@
     },
     "log_directory": "log/",
     "auto_start_enabled": false,
-    "current_log_file_path": "log/welcome_app-2021-09-09_11_27_31_-03.log",
-    "current_working_directory": "/opt/rebornos-iso-welcome"
+    "current_log_file_path": "log/welcome_app-2021-09-21_07_39_17_-03.log",
+    "current_working_directory": "/opt/rebornos-welcome"
 }
