--- a/pacman.conf
+++ b/pacman.conf
@@ -69,8 +69,8 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
-#Include = /etc/pacman.d/mirrorlist
+[RebornOS-testing]
+Server= https://github.com/Rippanda12/RebornOS/raw/main/$repo/os/$arch
 
 [Reborn-OS]
 SigLevel = Optional TrustAll
